--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@3.0.1/modern-normalize.min.css">
-    <link rel="stylesheet" href="/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@3.0.1/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="/styles.css" />
     <script src="index.js" defer></script>
     <title>Sign Up Demo</title>
-</head>
-<body>
-    <h1>Test</h1>
-</body>
+  </head>
+  <body>
+    <div class="container">
+      <div class="image-column"><img src="/east-side-nyc.jpg" alt="" /></div>
+      <div class="intro-text">
+        <h1>Lorem</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio error
+          placeat labore. Expedita ad quis aspernatur qui voluptatum fuga
+          asperiores sint quidem molestias dolor. Reiciendis dolor sint laborum
+          itaque! Ad?
+        </p>
+        <p>Lorem is lorem that lorem you</p>
+      </div>
+      <div class="form-row"></div>
+      <div class="submit-row"></div>
+    </div>
+  </body>
 </html>
