--- a/index.html
+++ b/index.html
@@ -24,7 +24,40 @@
         </p>
         <p>Lorem is lorem that lorem you</p>
       </div>
-      <div class="form-row"></div>
+      <div class="form-row">
+        <form action="">
+            <h2>Join Us</h2>
+            <fieldset>
+                <legend>First Name</legend>
+                <!-- <label for="first-name">Enter Name</label> -->
+                <input type="text" name="first-name" id="first-name">
+            </fieldset>
+            <fieldset>
+                <legend>Last Name</legend>
+                 <!-- <label for="last-name">Enter Name</label> -->
+                <input type="text" name="last-name" id="last-name">
+            </fieldset>
+            <fieldset>
+                <legend>Email</legend>
+                <!-- <label for="email">Enter Email</label> --> 
+                <input type="email" name="email" id="email">
+            </fieldset>
+            <fieldset>
+                <legend>Phone Number</legend>
+                 <!-- <label for="phone-number"></label> --> 
+                <input type="text" name="phone-number" id="phone-number">
+            </fieldset>
+            <fieldset>
+                <legend>Password</legend>
+                <!-- <label for="password"></label> --> 
+                <input type="password" name="password" id="password">
+            </fieldset>
+            <fieldset>
+                <legend>Confirm Password</legend>
+                 <!-- <label for="confirm-pass"></label> --> 
+                <input type="password" name="confirm-pass" id="confirm-pass">
+            </fieldset>
+        </form>
       <div class="submit-row"></div>
     </div>
   </body>
