--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="image-column"><img src="/east-side-nyc.jpg" alt="" /></div>
+      <div class="image-column"></div>
       <div class="intro-text">
         <h1>Lorem</h1>
         <p>
@@ -25,8 +25,8 @@
         <p>Lorem is lorem that lorem you</p>
       </div>
       <div class="form-row">
-        <form action="">
-            <h2>Join Us</h2>
+        <h2>Join Us</h2>
+        <form action="" id="form-container">
             <fieldset>
                 <legend>First Name</legend>
                 <!-- <label for="first-name">Enter Name</label> -->
@@ -58,7 +58,7 @@
                 <input type="password" name="confirm-pass" id="confirm-pass">
             </fieldset>
         </form>
-      <div class="submit-row"></div>
-    </div>
+       </div>
+      <div class="submit-row">Hello welcome to the black parade <button>Hello</button></div>
   </body>
 </html>
