Fixed mobile form overflow
media query for column to be only 1 when < 600px

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <fieldset>
                 <legend>Phone Number</legend>
                  <!-- <label for="phone-number"></label> --> 
-                <input type="text" name="phone-number" id="phone-number">
+                <input type="tel" name="phone-number" id="phone-number">
             </fieldset>
             <fieldset>
                 <legend>Password</legend>
