Responsive styling added for button/grid mobile
Grid mobile & below 600 was changed to all be centered
Button iven more Responsive styling to avoid text breaking it

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
             </fieldset>
         </form>
        </div>
-      <div class="submit-row">Hello welcome to the black parade <button>Hello</button></div>
+      <div class="submit-row">
+       <button>Submit</button>
+       <p>This button doesn't work</p>
+      </div>
   </body>
 </html>
